--- a/web/static/style.css
+++ b/web/static/style.css
@@ -28,6 +28,20 @@ body {
 	margin: 0 0 0;
 }
 
+.toast {
+	min-width: 250px;
+	margin-left: -125px;
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+	border-radius: 2px;
+	padding: 16px;
+	position: fixed;
+	z-index: 1000;
+	left: 50%;
+	bottom: 30px;
+}
+
 .input-wrapper {
 	margin: 0.8em 0;
 }
